style.css
html {
    height: 100vh;
    background-color: #050505;
    color: #7499c6;
    font-family: "Terminal", sans-serif;
    font-size: 20px;
    text-align: center; }

body {
    height: 100vh;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    flex-wrap: wrap;
    align-items: stretch;
    margin: 0;
}
    
.title {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 25px;
}

.title__button {
    border: none; 
    background-color: #050505; 
    color:goldenrod; 
    font-size:16px; 
    text-align: center; 
    padding-left: 40px;
    padding-right: 40px;
    cursor: pointer;
}

.settings {
    font-size: 20px;
    color: #C7C7C7;
    border: none;
    background-color: #050505;
    padding-bottom: 10px;
    cursor: pointer;
}

.feedback {
    font-size: 18px;
    color: #FF6161;
}

.journal {
    width: 225px;
    flex: 9 1 auto;
    text-align: left;
    padding-top: 5px;
    padding-right: 10px;
    margin-left: 18%;
}

.choices {
    color: goldenrod;
    font-size: 20px;
    text-align: left;
    font-style: italic;
    border: none;
    background-color: #050505;
    padding-bottom: 10px;
    cursor: pointer;
}

.menu {
    height: 99%;
    width: 250px;
    flex: 1 1 auto;
    color: #C7C7C7;
    justify-content: flex-end;
    flex-direction: column;
    position: fixed;
    align-items: flex-end;
    padding-top: 5px; }
.menu__settings {
    height: 40%; }
.menu__stats {
    height: 45%; }
.menu__links {
    height: 2%; }

a:link {
    color: #5CA3FF;
    text-decoration: none; }
a:visited {
    color: #5CA3FF; }

.hud{
    font-size: 15px; }
.hud__health{
    color:#FF6161; }
.hud__oxygen{
    color: aqua; }
.hud__profit{
    color:goldenrod; }

.mobile_hud { display: none; }

.tooltip {
    position: relative;
    display: inline-block;
    border-bottom: 1px dotted goldenrod;
}

.tooltip .tooltiptext {
    display: none;
    visibility: hidden;
    width: 300px;
    background-color: #050505;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    word-wrap: normal;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    top: -5px;
    left: 105%;
}

.tooltip:hover .tooltiptext {
    display: inline-block;
    visibility: visible;
}

.reference { 
    height: 100vh;
    max-width: 405px;
}

.image_ref {
    width: 30%;
    position: relative;
    height: 100vh;
    background: url(./images/station.jpg) center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    color: #fff;
}

@media only screen and (max-width: 1240px) {
    .journal {
        padding-left: 25px;
    }
}  
@media only screen and (max-width: 1155px) {
    .journal {
        padding-left: 50px;
    }
}  
@media only screen and (max-width: 1065px) {
    .journal {
        padding-left: 65px;
    }
} 
@media only screen and (max-width: 1020px) {
    .journal {
        padding-left: 70px;
    }
    .image_ref { display:none; }
} 
@media only screen and (max-width: 900px) {
    .journal {
        padding-left: 85px;
    }
}
@media only screen and (max-width: 850px) {
    .journal {
        padding-left: 95px;
    }
}  
@media only screen and (max-width: 795px) {
    .journal {
        padding-left: 115px;
    }
}  
@media only screen and (max-width: 735px) {
    .journal {
        padding-left: 125px;
    }
    .image_ref { display:none; }
}
@media only screen and (max-width: 685px) {
    .journal {
        padding-left: 135px;
    }
}
@media only screen and (max-width: 625px) {
    .journal {
        padding-left: 145px;
    }
}
@media only screen and (max-width: 580px) {
    .journal {
        padding-left: 155px;
    }
}  
@media only screen and (max-width: 515px) {
    .journal {
        padding-left: 165px;
    }
}

@media only screen and (max-width: 480px) {
    .menu { display: none; }

    .reference { display: none; }

    .image_ref { display:none; }

    .journal {
        width: 225px;
        text-align: justify;
        padding-top: 10px;
        padding-left: 10px;
        padding-right: 10px;
        padding-bottom: 125px;
        margin-left: 0%;
    }

    .mobile_feedback {
        color: #FF6161;
    }

    .choices {
        text-align: center;
    }

    .hud { display: none; }

    .mobile_hud {
        position: fixed;
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        left: 0;
        bottom: 0;
        width: 100%;
        background-color: #050505; }
    .mobile_hud__health{
        color:#FF6161;
        text-align: right;
        padding-right: 10px; }
    .mobile_hud__oxygen{
        color: aqua;
        text-align: right;
        padding-right: 10px; }
    .mobile_hud__profit{
        color:goldenrod;
        text-align: right;
        padding-right: 10px; }

    .mobile_settings {
        color: #C7C7C7;
        text-align: left;
        border: none;
        background-color: #050505;
        font-weight: bold;
        font-family: "Terminal", sans-serif;
        padding: 0px;
        padding-left: 10px;
        font-size: 20px;
    }
    
    table {
        text-align: left;
        width: 100%;
    }

    .tooltip .tooltiptext {
        width: 180px;
        top: 100%;
        left: 50%;
        margin-left: -60px;
    }
}

